# freertos-uart-cli

./: .gitignore  CMakeLists.txt  README.md
app/include/: main.h  uart.h
app/source/: main.c  uart.c
src/: main.c
